[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/SpaceBackground.png" type="Texture" id=1]
[ext_resource path="res://Resources/Themes/ButtonTheme.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Fuentes/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Gold.png" type="Texture" id=4]
[ext_resource path="res://Resources/silver.png" type="Texture" id=5]
[ext_resource path="res://Scenes/ScoresScene/ScoresScene.gd" type="Script" id=6]
[ext_resource path="res://Resources/bronze.png" type="Texture" id=7]
[ext_resource path="res://Resources/SecondBackground.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_right = 172.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Marcadores"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 8 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 80.0
margin_top = 80.0
margin_right = 1000.0
margin_bottom = 670.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 912.0
margin_bottom = 570.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/ScrollContainer"]
margin_right = 880.0
margin_bottom = 165.0
custom_constants/separation = 5

[node name="GoldPanel" type="Panel" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 80.0
rect_min_size = Vector2( 860, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Name" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GoldPanel"]
margin_left = 136.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HI" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GoldPanel"]
margin_left = 440.0
margin_top = 4.0
margin_right = 711.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GoldPanel"]
margin_left = 728.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 72.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/GoldPanel"]
margin_left = 48.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 72.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 880.0
margin_bottom = 165.0
custom_constants/separation = 10

[node name="SilverPanel" type="Panel" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 435.0
margin_bottom = 80.0
rect_min_size = Vector2( 435, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/SilverPanel"]
margin_left = 16.0
margin_top = 12.0
margin_right = 72.0
margin_bottom = 68.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/SilverPanel"]
margin_left = 80.0
margin_top = 12.0
margin_right = 263.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HI" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/SilverPanel"]
margin_left = 271.0
margin_top = 12.0
margin_right = 407.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BronzePanel" type="Panel" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 445.0
margin_right = 880.0
margin_bottom = 80.0
rect_min_size = Vector2( 435, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/BronzePanel"]
margin_left = 16.0
margin_top = 12.0
margin_right = 72.0
margin_bottom = 68.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/BronzePanel"]
margin_left = 80.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HI" type="Label" parent="MarginContainer/Panel/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/BronzePanel"]
margin_left = 272.0
margin_top = 8.0
margin_right = 410.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 808.0
margin_top = 32.0
margin_right = 965.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
margin_left = 128.0
margin_top = 32.0
margin_right = 302.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Reintentar Nivel"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
